--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "devDependencies": {
         "axios": "^1.6.1",
+        "blade-formatter": "^1.41.1",
         "laravel-vite-plugin": "^1.0.0",
         "vite": "^5.0.0"
     }
